# MyCL-Studio

./: .gitignore  CHANGELOG.md  CLAUDE.md  KOD-ANALIZ-RAPORU.md  MISSIONS-ENJEKSIYON-RAPORU.md  MyCL-Yetenekler.html  README.md  index.html  müfettiş.md  package-lock.json  package.json  setup.sh  vite.config.ts
.github/workflows/: check.yml
assets/: mycl-schema.md
assets/agent-prompts/: debate-protocol.md  orchestrator-system.md
assets/gates/: phase-01.ts  phase-04.ts  phase-08.ts
assets/i18n/: en.json  tr.json
assets/profiles/: dart.json  deno.json  dotnet.json  elixir.json  go.json  gradle.json  maven.json  node-bun.json  node-npm.json  node-pnpm.json  node-yarn.json  php.json  python-pip.json  python-poetry.json  python-uv.json  ruby.json  rust.json  swift.json
assets/quality-rules/: code-quality.yml
assets/schemas/: phase-04-spec.json
assets/scripts/: mycl-runtime-error-plugin.cjs
assets/security-rules/: README.md  data-sanitization.yml  web-security.yml
assets/templates/: design-architect.md  design-data.md  design-negotiate.md  design-security.md  (+14 more)
browser-bridge/: README.md  server.mjs  start.mjs
e2e/: drive.mjs  lib.mjs  live.mjs  smoke.mjs  step.mjs
orchestrator/: arch-check.mjs  csp-check.mjs  harness.mjs  headers-check.mjs  package-lock.json  package.json  tsconfig.json
prototypes/: README.md  node-npm_typescript_react_next.meta.json
scripts/: check.sh  deploy.sh  desktop-icon.sh
src/: App.css  App.tsx  i18n.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  orchestrator.rs  recent.rs  sys_path.rs  update_helper.sh  updater.rs
(+363 files in other folders)
